<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="Main Menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_option">
        <menu>
            <item
                android:id="@+id/nav_bahasa"
                android:title="@string/bahasa"
                android:orderInCategory="100"
                android:icon="@drawable/pngworld" />
            <item
                android:id="@+id/nav_tentang"
                android:title="@string/tentang_kami"
                android:orderInCategory="100"
                android:icon="@drawable/pnginformation"/>

            <item
                android:id="@+id/nav_share"
                android:title="@string/share_this_apps"
                android:orderInCategory="100"
                android:icon="@drawable/pngshare"/>
            <item
                android:id="@+id/nav_suka"
                android:title="@string/suka_Aplikasi_ini"
                android:orderInCategory="100"
                android:icon="@drawable/pnglike"/>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/keluar"
                android:orderInCategory="100"
                android:icon="@drawable/pnglogout"/>
        </menu>
    </item>

</menu>